grammar.ebnf
program ::= { statement } exit_stmt
statement ::= decl | assign
decl ::= type [ "mut" ] ident "{" expr "}"
type ::= "i32" | "i64" | "bool"
assign ::= ident ":=" expr
exit_stmt ::= "exit" factor
expr ::= arith [ ( "==" | "!=" ) arith ]
arith ::= term { ( "+" | "-" ) term }
term ::= factor { "*" factor }
factor ::= number | "true" | "false" | ident
